--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my portfolio!</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
+        <h1 style="background-color: pink; text-align: center; padding: 20px;">Welcome to my portfolio!</h1>
+        <nav style="text-align: center;">
+            <ul style="display: inline-block;">
+                <li style="display: inline; margin-right: 15px;"><a href="index.html">Home</a></li>
+                <li style="display: inline; margin-right: 15px;"><a href="projects.html">Projects</a></li>
+                <li style="display: inline; margin-right: 15px;"><a href="skills.html">Skills</a></li>
+                <li style="display: inline; margin-right: 15px;"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="Introduction">
+        <section id="Introduction" style="text-align: center;">
             <h2>About me</h2>
-            <p>Hello, I'm Shaira Nicole J. Basulgan, 3rd year BSIS student in TUP Manila.</p>
+            <p>Hello, I'm Shaira Nicole J. Basulgan, 3rd year BSIS student in TUP Manila. I have some experience in coding and still learning.</p>
+            <p>I'm kinda enjoying the process of doing codes and i hope i could keep it that way.</p>
+            <img src="https://github.com/RgNixD" alt="Profile Picture" style="border-radius: 100%;"
         </section>
     </main>
 
-    <footer> 
+    <footer style="background-color: lightpink; text-align: center; padding: 10px;"> 
         <p>&copy; 2024. Shaira Nicole J. Basulgan. All rights reserved.</p>
-        <ul>
-            <li><a href="https://github.com/RgNixD">github</a></li>
+        <ul style="list-style-type: none; padding: 0;">
+            <li style="display: inline; margin-right: 15px;"><a href="https://github.com/RgNixD">Github</a></li>
         </ul>
     </footer>
 </body>
