--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     <main>
         <section id="Introduction" style="text-align: center;">
             <h2>About me</h2>
-            <p>Hello, I'm Shaira Nicole J. Basulgan, 3rd year BSIS student in TUP Manila. I have some experience in coding and still learning.</p>
-            <p>I'm kinda enjoying the process of doing codes and i hope i could keep it that way.</p>
-            <img src="https://github.com/RgNixD" alt="Profile Picture" style="border-radius: 100%;"
+            <p>Hello, I'm Shaira Nicole J. Basulgan, 3rd year BSIS student in TUP Manila. I have a foundation in the basics of coding, including, (C, C++, and Python), but I honestly still consider myself a beginner as i'm still gaining experience and building through practice. I strive to develop my abilities until i become an expert and I'm excited to share my progress through my portfolio. </p>
+            <img src="profile.jpg/Id picture.jpg" alt="Profile Picture" style="border-radius: 50px; width: 150px;"
         </section>
     </main>
 
     <footer style="background-color: lightpink; text-align: center; padding: 10px;"> 
-        <p>&copy; 2024. Shaira Nicole J. Basulgan. All rights reserved.</p>
+        <p>&copy; 2024. Shaira Nicole J. Basulgan Site. All rights reserved.</p>
         <ul style="list-style-type: none; padding: 0;">
             <li style="display: inline; margin-right: 15px;"><a href="https://github.com/RgNixD">Github</a></li>
         </ul>
