--- a/projects.html
+++ b/projects.html
@@ -24,16 +24,16 @@
                 <h2 style="color: lightcoral;">Project 1: </h2>
                 <table border="1" style="width: 100%; margin: auto; text-align: center;"
                 <tr>
-                    <td><strong>Title</strong></td>
+                    <td><strong>Subject</strong></td>
                     <td><strong>Description</strong></td>
                     <td><strong>Technologies</strong></td>
                     <td><strong>Link</strong></td>
                 </tr>
                 <tr>
-                    <td>Project 1</td>
-                    <td>Explanation</td>
-                    <td>Tool/s</td>
-                    <td><a href="https://github.com/RgNixD">Link</a></td>
+                    <td>Data Structure and Algorithms</td>
+                    <td>Application and implementation of ADT LIST operations as an ATM simulator. Where the user can navigate and access the basic transactions like a real ATM does.</td>
+                    <td>C++ & Codeblocks</td>
+                    <td><a href="project.files/ATM_Simulation_Project.cpp" target="_blank">View Here</a></td>
                 </tr>
                 <table>
             </article>
@@ -42,16 +42,16 @@
                 <h2 style="color: lightcoral;">Project 2: </h2>
                 <table border="1" style="width: 100%; margin: auto; text-align: center;"
                 <tr>
-                    <td><strong>Title</strong></td>
+                    <td><strong>Subject</strong></td>
                     <td><strong>Description</strong></td>
                     <td><strong>Technologies</strong></td>
                     <td><strong>Link</strong></td>
                 </tr>
                 <tr>
-                    <td>Project 2</td>
-                    <td>Explanation</td>
-                    <td>Tool/s</td>
-                    <td><a href="https://github.com/RgNixD">Link</a></td>
+                    <td>Computer Programming 2</td>
+                    <td>A c++ reservation program where users can make reservations that include time check-in/out, room type, and the prices in a hotel.</td>
+                    <td>C++ & Codeblocks</td>
+                    <td><a href="project.files/classvsstruct.cpp" target="_blank">View Here</a></td>
                 </tr>
                 <table>
             </article>
@@ -60,16 +60,33 @@
                 <h2 style="color: lightcoral;">Project 3: </h2>
                 <table border="1" style="width: 100%; margin: auto; text-align: center;"
                 <tr>
-                    <td><strong>Title</strong></td>
+                    <td><strong>Subject</strong></td>
                     <td><strong>Description</strong></td>
                     <td><strong>Technologies</strong></td>
                     <td><strong>Link</strong></td>
                 </tr>
                 <tr>
-                    <td>Project 3</td>
-                    <td>Explanation</td>
-                    <td>Tool/s</td>
-                    <td><a href="https://github.com/RgNixD">Link</a></td>
+                    <td>Computer Programming 1</td>
+                    <td>a cinema reservation c program where users can reserve a seat, cancel reservations, display the records at a cinema, and be able to choose and buy foods.</td>
+                    <td>C & Codeblocks</td>
+                    <td><a href="project.files/Group_3_CineBite.c" target="_blank">View Here</a></td>
+                </tr>
+                <table>
+            </article>
+            <article></article>
+                <h2 style="color: lightcoral;">Project 4: </h2>
+                <table border="1" style="width: 100%; margin: auto; text-align: center;"
+                <tr>
+                    <td><strong>Subject</strong></td>
+                    <td><strong>Description</strong></td>
+                    <td><strong>Technologies</strong></td>
+                    <td><strong>Link</strong></td>
+                </tr>
+                <tr>
+                    <td>Object Oriented Programming</td>
+                    <td>A Python program that has a menu-driven console application that allows users to select from the options to perform different operations.</td>
+                    <td>Python & VSCode</td>
+                    <td><a href="project.files/Basulgan_FinalProject.py" target="_blank">View Here</a></td>
                 </tr>
                 <table>
             </article>
@@ -77,7 +94,7 @@
     </main>
 
     <footer style="background-color: lightpink; text-align: center; padding: 10px;"> 
-        <p>&copy; 2024. Shaira Nicole J. Basulgan. All rights reserved.</p>
+        <p>&copy; 2024. Shaira Nicole J. Basulgan Site. All rights reserved.</p>
         <ul style="list-style-type: none; padding: 0;">
             <li style="display: inline; margin-right: 15px;"><a href="https://github.com/RgNixD">Github</a></li>
         </ul>
