--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <main>
         <section>
-            <h2 style="color: hotpink; text-align: center;">Message me at:</h2>
+            <h2 style="color: hotpink; text-align: center;">Get in touch</h2>
             <form action="#", method="post" style="text-align: center;">
                 <label for="name">Name</label>
                 <input type="text", id="name" name="name" required><br>
@@ -29,7 +29,7 @@
                 <input type="email", id="email" name="email" required><br>
 
                 <label for="message">Message</label>
-                <textarea id="message" name="message" rows="3" required></textarea><br>
+                <textarea id="message" name="message" rows="5" required></textarea><br>
 
                 <input type="submit" value="Send">
             </form>
@@ -37,7 +37,7 @@
     </main>
 
     <footer style="background-color: lightpink; text-align: center; padding: 10px;"> 
-        <p>&copy; 2024. Shaira Nicole J. Basulgan. All rights reserved.</p>
+        <p>&copy; 2024. Shaira Nicole J. Basulgan Site. All rights reserved.</p>
         <ul style="list-style-type: none; padding: 0;">
             <li style="display: inline; margin-right: 15px;"><a href="https://github.com/RgNixD">Github</a></li>
         </ul>
