--- a/skills.html
+++ b/skills.html
@@ -38,7 +38,7 @@
     </main>
 
     <footer style="background-color: lightpink; text-align: center; padding: 10px;"> 
-        <p>&copy; 2024. Shaira Nicole J. Basulgan. All rights reserved.</p>
+        <p>&copy; 2024. Shaira Nicole J. Basulgan Site. All rights reserved.</p>
         <ul style="list-style-type: none; padding: 0;">
             <li style="display: inline; margin-right: 15px;"><a href="https://github.com/RgNixD">Github</a></li>
         </ul>
